# ompi

config/: opal_check_cuda.m4
ompi/mca/coll/bkpap/: Makefile.am  ar_val.c  ar_val_cu.c  bkpap_kernel.cu  bkpap_kernel.h  bkprof_timing_csv.py  coll_bkpap.h  coll_bkpap_allreduce.c  coll_bkpap_base_rsa_gpu.c  coll_bkpap_bcast.c  coll_bkpap_binomial.c  coll_bkpap_chain.c  coll_bkpap_component.c  coll_bkpap_dplane_rma.c  coll_bkpap_dplane_tag.c  coll_bkpap_ktree.c  coll_bkpap_module.c  coll_bkpap_reduce.c  coll_bkpap_ucp.c  coll_bkpap_ucp.inl  coll_bkpap_util.inl  configure.m4  help-mpi-coll-bkpap.txt  tst.sh  tst_inst.sh  val.sh
ompi/mca/coll/bkpap/test/: ar_val.c  ar_val_cu.c  tst.sh  val.sh
